# llama.cpp

./: .gitignore  CMakeLists.txt  CODEOWNERS  build-xcframework.sh  convert_hf_to_gguf.py  convert_hf_to_gguf_update.py  convert_lora_to_gguf.py  ty.toml
.github/workflows/: build-3rd-party.yml  build-and-test-snapdragon.yml  build-android.yml  build-apple.yml  build-cache.yml  build-cann.yml  build-cross.yml  build-openvino.yml  build-riscv-vlen.yml  build-riscv.yml  build-sanitize.yml  build-self-hosted.yml  build-sycl.yml  build-virtgpu.yml  build-vulkan.yml  build.yml  code-style.yml  eliza-cuda-validation.yml  eliza-metal-validation.yml  eliza-vulkan-validation.yml  hip-quality-check.yml  release.yml  server.yml
.swarm/: collab.md
common/: arg.cpp  chat.cpp  chat.h  common.cpp  common.h  debug.cpp  fit.cpp  sampler_token_trie.h  sampling.cpp  speculative.cpp
conversion/: __init__.py  qwen.py
docs/: build.md  eliza-cuda-runtime-validation.md  eliza-upstream-pr-candidates-2026-05-15.md  ops.md
docs/backend/: SYCL.md
examples/speculative-simple/: speculative-simple.cpp
ggml/: CMakeLists.txt
ggml/cmake/: ggml-config.cmake.in
ggml/include/: ggml-backend.h  ggml-rpc.h  ggml-sycl.h  ggml.h
ggml/src/: CMakeLists.txt  ggml-alloc.c  ggml-backend-meta.cpp  ggml-backend.cpp  ggml-common.h  ggml-quants.c  ggml-quants.h  ggml-tcq-codebook.h  ggml.c  gguf.cpp  polar_centroids.h
ggml/src/ggml-cpu/: CMakeLists.txt  arch-fallback.h  attn-score-tbq-polar.c  fused-attn-qjl-tbq-avx2.c  fused-attn-qjl-tbq-neon.c  fused-attn-qjl-tbq.c  fused-attn-qjl-tbq.h  fused-hadamard-polar-dot.c  fused-q4-polar-dot-avx2.c  fused-q4-polar-dot-neon.c  fused-q4-polar-dot.c  fused-q4-polar-dot.h  ggml-cpu-impl.h  ggml-cpu.c  ops.cpp  ops.h  quants-polar.c  quants.c  quants.h
ggml/src/ggml-cpu/polarquant/: polar_cpu_features.h  polar_dot_preht_avx2.c  polar_dot_preht_neon.c  polar_dot_preht_ref.c  polarquant_preht.h  polarquant_preht_dispatch.c
ggml/src/ggml-cpu/qjl/: qjl_block.h  qjl_cpu_features.h  qjl_dispatch.c  qjl_quantize_avx2.c  qjl_quantize_neon.c  qjl_score_avx2.c  qjl_score_avxvnni.c  qjl_score_dotprod.c  qjl_score_neon.c  quants-qjl.c
ggml/src/ggml-cuda/: CMakeLists.txt  common.cuh  conv2d-mm.cu  convert.cu  cpy-utils.cuh  cpy.cu  dequantize.cuh  fattn-common.cuh  fattn-vec.cuh  fattn.cu  fused-attn-qjl-tbq.cu  gated_delta_net.cu  getrows.cu  ggml-cuda.cu  istft.cu  istft.cuh  mmq.cu  mmq.cuh  mmvq.cu  polarquant.cu  polarquant.cuh  qjl.cu  qjl.cuh  quantize.cu  set-rows.cu  turbo-tcq-codebook.h  turbo-tcq.cu  turbo-tcq.cuh  turboquant.cuh  vecdotq.cuh
ggml/src/ggml-cuda/template-instances/: fattn-vec-instance-tbq3_0-tbq3_0.cu  fattn-vec-instance-tbq3_0-tbq4_0.cu  fattn-vec-instance-tbq4_0-tbq3_0.cu  fattn-vec-instance-tbq4_0-tbq4_0.cu  generate_cu_files.py
ggml/src/ggml-cuda/vendors/: hip.h  musa.h
ggml/src/ggml-metal/: CMakeLists.txt  ggml-metal-device.cpp  ggml-metal-device.h  ggml-metal-device.m  ggml-metal-impl.h  ggml-metal-ops.cpp  ggml-metal-ops.h  ggml-metal.metal
ggml/src/ggml-metal/eliza-kernels/: README.md  istft.metal  polar.metal  tbq3_0.metal
ggml/src/ggml-metal/eliza-shipped/: fused_attn_qjl_polar.metal  fused_attn_qjl_tbq.metal  istft.metal  polar.metal  polar_preht.metal  qjl.metal  qjl_set_rows.metal  turbo3.metal  turbo3_tcq.metal  turbo4.metal
ggml/src/ggml-openvino/: ggml-openvino.cpp
ggml/src/ggml-sycl/: dmmv.cpp  ggml-sycl.cpp
ggml/src/ggml-virtgpu/: CMakeLists.txt
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
gguf-py/gguf/: constants.py  tensor_mapping.py
grammars/: README.md
include/: llama.h
omnivoice/examples/: prompt.txt
omnivoice/src/: dac-decoder.h  eliza-inference-ffi.cpp  ffi.h  kokoro-engine.h  kokoro-file-picker.cpp  kokoro-file-picker.h  omnivoice.cpp  omnivoice.h  pipeline-codec.cpp  pipeline-tts.cpp  pipeline-tts.h  version.h
omnivoice/tools/: convert_kokoro_to_gguf.py
scripts/: cuda-docker-build.sh  cuda-mtp-validate.sh
src/: CMakeLists.txt  llama-adapter.h  llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-cparams.h  llama-eagle3.cpp  llama-grammar.cpp  llama-graph.cpp  llama-hparams.h  llama-kv-cache.cpp  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-model-loader.cpp  llama-model.cpp  llama-model.h  llama-quant.cpp  llama-sampler.cpp  llama.cpp
src/models/: dflash-draft.cpp  dflash_draft.cpp  kokoro.cpp  models.h  qwen35.cpp  qwen35moe.cpp  qwen3next.cpp
tests/: CMakeLists.txt  bench-fused-kernels.cpp  test-backend-ops.cpp  test-chat.cpp  test-cuda-extra-kernels.cpp  test-fused-kernels.cpp  test-gguf.cpp  test-llama-archs.cpp  test-qjl-cache.cpp  test-quantize-fns.cpp  test-quantize-perf.cpp  test-shared-kv-quant-imatrix.cpp
tools/: CMakeLists.txt
tools/cli/: CMakeLists.txt  README.md  cli.cpp
tools/completion/: completion.cpp
tools/kokoro/: CMakeLists.txt  convert_kokoro_pth_to_gguf.py
tools/kokoro/include/: kokoro-istft.h  kokoro-layers.h  kokoro-phonemes.h  kokoro-predictor.h  kokoro-server-mount.h  kokoro.h
tools/kokoro/src/: kokoro-istft.cpp  kokoro-phonemes.cpp  kokoro-predictor.cpp  kokoro-server-mount.cpp  kokoro.cpp
tools/kokoro/tests/: CMakeLists.txt  test_kokoro_istft.cpp  test_kokoro_phonemes.cpp
tools/kokoro/tools/: dump_reference_activations.py  kokoro-tts.cpp
tools/llama-bench/: CMakeLists.txt  llama-bench.cpp  quant-bench.cpp
tools/mtmd/: CMakeLists.txt  clip-impl.h  clip-model.h  clip.cpp  mtmd.cpp
tools/mtmd/models/: models.h  qwen3a.cpp
tools/omnivoice/: CMakeLists.txt
tools/omnivoice/include/: omnivoice.h  server-mount.h
tools/omnivoice/src/: backend.h  dac-decoder.h  eliza-inference-ffi.cpp  omnivoice.cpp  pipeline-tts.cpp  server-mount.cpp  streaming-opts.h
tools/omnivoice/tests/: dac-parity.cpp
tools/omnivoice/tools/: omnivoice-codec.cpp  omnivoice-tts.cpp
tools/quantize/: quantize.cpp
tools/server/: CMakeLists.txt  README.md  server-chat.cpp  server-common.cpp  server-common.h  server-context.cpp  server-models.cpp  server-task.cpp  server-task.h  server.cpp
tools/server/tests/unit/: test_chat_completion.py
(+37 files in other folders)
